1999-07-31  James Henstridge  <james@daa.com.au>

	* gtkmodule.c: put in Paul Fisher's enhancements to the threading
	code.  It should now work better with multiple threads calling
	GTK+ routines (remember to use threads_enter/threads_leave), and
	doesn't reintroduce the global interpreter lock problems that
	Duncan's original code worked around.

	* configure.in: added a check for the numpy header.
	
	* GdkImlib.py: added wrappers for the numpy routines.

	* gdkimlibmodule.c: added Travis Oliphant's Numeric python stuff to
	the imlib module.

1999-07-20  Matt Wilson  <msw@redhat.com>

	* gtk.py (gdk_flush): new wrapper
	* gtkmodule.c (_wrap_gdk_flush): new implementation

1999-07-19  James Henstridge  <james@daa.com.au>

	* gtk.py (GtkAdjustment.set_all): a wrapper for the new function.

	* gtkmodule.c (_wrap_gtk_adjustment_set_all): simple wrapper for
	setting values on an adjustment.

	* gtk.py (GtkCList.get_column_width): a wrapper for this new function.

	* gtkmodule.c (_wrap_gtk_clist_get_column_width): a function to get
	the column width for a column in a clist.

	* gtk.py (_filtprops): convert GtkAccelGroup and GdkImlibImage types
	back to the C equivalents.  This makes adding GnomeCanvasImage items
	to the GnomeCanvas easier.
	(GtkCTree.node_get_selectable): added wrapper function.

1999-07-18  James Henstridge  <james@daa.com.au>

	* gtkmodule.c (_wrap_gdk_threads_enter): don't use PyGTK_BLOCK_THREADS,
	since it should only be called outside the gtk main loop.  Instead
	use Py_BEGIN_ALLOW_THREADS.

	* examples/gl/*: new examples of use of gtkgl.
	
	* gtkgl.py: renamed from GtkGL.py.
	
	* gtkglmodule.c (_wrap_gtk_gl_area_new, _wrap_gtk_gl_area_share_new):
	fixed small typo.

	* GtkGL.py: added constants.

1999-07-15  James Henstridge  <james@daa.com.au>

	* configure.in, Makefile.am: added tests for gtkglarea.
	
	* GtkGL.py: python wrapper for the GtkGLArea widget, and a few extra
	functions for use with the widget.
