@@ -16,6 +16,10 @@ AM_CONDITIONAL(BUILD_IMLIB, $build_imlib)
 AM_PATH_GTKGL(build_gtkgl=true, build_gtkgl=false)
 AM_CONDITIONAL(BUILD_GTKGL, $build_gtkgl)
 
+dnl what to do about libglade-gnome ?
+AM_PATH_LIBGLADE(build_libglade=true, build_libglade=false)
+AM_CONDITIONAL(BUILD_LIBGLADE, $build_libglade)
+
 dnl checks to see if Numeric Python is installed.
 save_CPPFLAGS="$CPPFLAGS"
 CPPFLAGS="$CPPFLAGS $PYTHON_INCLUDES"
