@@ -2,9 +2,9 @@ noinst_PYTHON = generate.py scmexpr.py
 
 EXTRA_DIST = gtk.defs gtkbase.defs gtkcontainers.defs gtkdata.defs \
  gtkedit.defs gtkenums.defs gtklists.defs gtkmenus.defs gtkmisc.defs \
- gtkranges.defs gtkdnd.defs gtkgl.defs
+ gtkranges.defs gtkdnd.defs gtkgl.defs libglade.defs
 
-all: gtk.ignore gtkgl.ignore
+all: gtk.ignore gtkgl.ignore libglade.ignore
 
 gtk.ignore: ../gtkmodule.c
 	echo "# ignore list for gtkmodule" > $(srcdir)/gtk.ignore
@@ -17,3 +17,10 @@ gtkgl.ignore: ../gtkglmodule.c
 	echo "# (automatically generated)" >> $(srcdir)/gtkgl.ignore
 	sed -n 's/^.*_wrap_\([a-zA-Z_]*\),.*$$/\1/p' \
 	  < $(srcdir)/../gtkglmodule.c >> $(srcdir)/gtkgl.ignore
+
+libglade.ignore: ../libglademodule.c
+	echo "# ignore list for libglademodule" > $(srcdir)/libglade.ignore
+	echo "# (automatically generated)" >> $(srcdir)/libglade.ignore
+	sed -n 's/^.*_wrap_\([a-zA-Z_]*\),.*$$/\1/p' \
+	  < $(srcdir)/../libglademodule.c >> $(srcdir)/libglade.ignore
+
