@@ -1,0 +1,39 @@
+; -*- scheme -*-
+
+(define-object GladeXML (GtkData))
+
+(define-func glade_xml_new
+  GladeXML
+  ((string filename)
+   (string rooot)))
+
+(define-func glade_xml_new_with_domain
+  GladeXML
+  ((string filename)
+   (string root)
+   (string domain)))
+
+; glade_xml_signal_connect_full
+; glade_xml_signal_autoconnect_full
+
+(define-func glade_xml_get_widget
+  GtkWidget
+  ((GladeXML xml)
+   (string name)))
+
+(define-func glade_xml_get_widget_by_long_name
+  GtkWidget
+  ((GladeXML xml)
+   (string longname)))
+
+(define-func glade_get_widget_name
+  static_string
+  ((GtkWidget widget)))
+
+(define-func glade_get_widget_long_name
+  static_string
+  ((GtkWidget widget)))
+
+(define-func glade_get_widget_tree
+  GladeXML
+  ((GtkWidget widget)))
