@@ -1,3 +1,13 @@
+1999-08-01  James Henstridge  <james@daa.com.au>
+
+	* pyglade/build.py (optionmenu_new): a small fix from David Cole.
+
+	* configure.in: added tests to see if libglade is installed.
+
+	* libglademodule.c: the rest of the libglade module
+
+	* generate/libglade.defs: a .defs file for libglade.
+
 1999-07-31  James Henstridge  <james@daa.com.au>
 
 	* gtkmodule.c: put in Paul Fisher's enhancements to the threading
